<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_resources"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_resources" />
    <item
        android:id="@+id/nav_community"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/nav_community" />
    <item
        android:id="@+id/nav_forums"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/nav_forums" />
    <item
        android:id="@+id/nav_messages"
        android:icon="@android:drawable/ic_dialog_email"
        android:title="@string/nav_messages" />
    <item
        android:id="@+id/nav_notifications"
        android:icon="@android:drawable/ic_popup_reminder"
        android:title="@string/nav_notifications" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />
</menu>
